# systemintegration_KEA

./: systemintegration_KEA.sln
01._Miscellaneous/: paymentiframe.html
02._Data_files/: dataParser.py  me.xml
03._Modules/html_no_modules/: index.js
03._Modules/html_with_modules/: index.js  myModule.js
03._Modules/node_commonjs_modules/: index.js
03._Modules/node_es_modules/: index.js
03._Modules/python_modules/: main.py
03._Modules/python_modules/my_modules/: file_one.py  file_two.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Environments/03._Poetryenv_Environment/: pyproject.toml
06._Servers/node/: app.js
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/node/: app.js  package-lock.json  package.json
08._Server-To-Server/python/: main.py  pyproject.toml
09._Environment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
11._Short_Polling/node/public/: index.html
12._Long_Polling/node/: app.js
13._Server-Sent_Events/node-sse/: app.js
13._Server-Sent_Events/node/public/: index.html
13._Server-Sent_Events/python-sse/: main.py  pyproject.toml
13._Server-Sent_Events/python-sse/templates/: index.html
15._GitHub_Webhooks/node-webhooks/: app.js
15._GitHub_Webhooks/python-webhooks/: main.py  pyproject.toml
Assignments/01a.File-Formats-Bonanza/: dataParser.js
Assignments/04b.Database-Granular-Access/: ReadMe.md
Assignments/Mandatories/: mandatory_1.md
(+24 files in other folders)
