[tool.poetry]
name = "python-sse"
version = "0.1.0"
description = ""
authors = ["Yelong Hartl-He <Yelong.he@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
